--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="fill_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/background"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -21,15 +22,29 @@
 
 
     <Button
-        android:id="@+id/buttonToEvents"
-        android:layout_width="355dp"
+        android:id="@+id/buttonToConsult"
+        android:layout_width="180dp"
         android:layout_height="85dp"
-        android:layout_marginBottom="50dp"
-        android:backgroundTint="#AF0C0C"
-        android:text="Events"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="100dp"
+        android:backgroundTint="#A8CAC176"
+        android:text="Consultations"
+        android:textColor="#A8504545"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <Button
+        android:id="@+id/buttonToEvents"
+        android:layout_width="180dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="100dp"
+        android:backgroundTint="#A8CAC176"
+        android:text="Events "
+        android:textColor="#A8504545"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -40,6 +55,7 @@
         android:fontFamily="casual"
         android:text="@string/prattlebattle"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#504545"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +70,7 @@
         android:layout_marginTop="15dp"
         android:fontFamily="casual"
         android:text="@string/coddesses"
+        android:textColor="#504545"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,12 +81,15 @@
     <Button
         android:id="@+id/buttonSubscribe"
         android:layout_width="355dp"
-        android:layout_height="67dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="33dp"
-        android:backgroundTint="@color/purple_700"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="#A8D3AE74"
         android:fontFamily="sans-serif"
         android:shape="oval"
         android:text="@string/subscribe_now"
+        android:textColor="#504545"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -80,10 +100,10 @@
         android:id="@+id/textViewTheory"
         android:layout_width="79dp"
         android:layout_height="36dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="10dp"
         android:text="@string/theory"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonSubscribe" />
 
@@ -91,10 +111,10 @@
         android:id="@+id/textViewPractice"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="10dp"
         android:text="@string/practice"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonToLessons" />
 
@@ -102,9 +122,12 @@
         android:id="@+id/buttonToPractice"
         android:layout_width="355dp"
         android:layout_height="85dp"
-        android:layout_marginTop="7dp"
-        android:backgroundTint="@color/teal_700"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="#A8ADA8B3"
         android:text="@string/rehearse_to_converse"
+        android:textColor="#504545"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -115,21 +138,17 @@
         android:id="@+id/buttonToLessons"
         android:layout_width="355dp"
         android:layout_height="85dp"
-        android:backgroundTint="@color/main"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        android:backgroundTint="#A8A2D9CE"
         android:text="@string/start_reading_amp_listening"
+        android:textColor="#504545"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewTheory" />
 
-    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-    <!--        android:layout_width="415dp"-->
-    <!--        android:layout_height="93dp"-->
-    <!--        android:layout_marginTop="99dp"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.5"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/buttonToPractice" />-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
